Projet total/Assembleur/tests/good/testfile-good-register.ms
    .section text
mov %rax %rbx
mov %rcx %rdx
add %rex %rfx %rgx