Projet total/Assembleur/tests/bad/testfile-bad-section-2.ms
    .section data
add %rax %rbx %rcx